[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ed-explorer-stats"
dependencies = [
	"colorama",
]
dynamic = ["version"]

[project.scripts]
explorer-stats = "ed_explorer_stats.exploration_stats:main"

[tool.setuptools.dynamic]
version = {attr = "ed_explorer_stats.exploration_stats.VERSION"}